# Greener-before-sleep

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  quotes.txt
backend/: Cargo.toml  quotes.txt
backend/src/: load.rs  main.rs  passwords.rs  testing.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  dashboard.html  form.html  index.html  styles.css
frontend/src/: greener.html  index.html  main.rs  styles.css
frontend/src/components/: dashboard.rs  home.rs  login.rs  mod.rs
