[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3.3"
serde = {version = "^1.0.147", features = ["derive"] }
serde_json = "^1.0.87"
bcrypt = "^0.13.0"
common = { version = "0.1.0", path = "../common" }