[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
targets = ["wasm32-unknown-unknown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
serde_json = "1"
serde = {version = "=1.0.147", features = ["derive"] }
yew-router = "0.16.0"
common = { version = "0.1.0", path = "../common" }